PROJECT(MonteCarloPathTracing LANGUAGES CXX)
CMAKE_MINIMUM_REQUIRED(VERSION 3.0)

SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY .)
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
SET(CMAKE_CXX_FLAGS_DEBUG "$ENV{CXXFLAGS} -O0 -Wall -Wno-deprecated-declarations -g")
SET(CMAKE_CXX_FLAGS_RELEASE "$ENV{CXXFLAGS} -O3 -Wall -Wno-deprecated-declarations")

INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/cpp)
AUX_SOURCE_DIRECTORY(${CMAKE_SOURCE_DIR}/cpp DIR_SRCS)
ADD_EXECUTABLE(${PROJECT_NAME} ${DIR_SRCS})

IF(NOT CMAKE_BUILD_TYPE)
  SET(CMAKE_BUILD_TYPE "Release")
ENDIF(NOT CMAKE_BUILD_TYPE)

MESSAGE(STATUS "Build type: ${CMAKE_BUILD_TYPE}")
