PROJECT(MonteCarloPathTracing LANGUAGES CXX)
CMAKE_MINIMUM_REQUIRED(VERSION 3.1.0)

IF(NOT CMAKE_BUILD_TYPE)
  SET(CMAKE_BUILD_TYPE "Debug")
ENDIF(NOT CMAKE_BUILD_TYPE)

MESSAGE(STATUS "Build type: ${CMAKE_BUILD_TYPE}")

SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY .)
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
SET(CMAKE_CXX_FLAGS_DEBUG "$ENV{CXXFLAGS} -DVERBOSE -O0 -Wall -Wno-deprecated-declarations -g -ggdb")
SET(CMAKE_CXX_FLAGS_RELEASE "$ENV{CXXFLAGS} -DVERBOSE -O3 -fopenmp -Wall -Wno-deprecated-declarations")

INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/cpp)
AUX_SOURCE_DIRECTORY(${CMAKE_SOURCE_DIR}/cpp DIR_SRCS)
ADD_EXECUTABLE(${PROJECT_NAME} ${DIR_SRCS})

ADD_SUBDIRECTORY(${CMAKE_SOURCE_DIR}/cpp/unit_tests ./tests)
