FILE(GLOB SRCS ${CMAKE_SOURCE_DIR}/cpp/*.cc)
FILE(GLOB TESTS RELATIVE ${CMAKE_SOURCE_DIR}/cpp/unit_tests/ *.cxx)

FOREACH(UNIT_TEST ${TESTS})
  STRING(REPLACE ".cxx" "" TEST_NAME ${UNIT_TEST})
  STRING(REPLACE "test_" "" TEST_NAME ${TEST_NAME})
  STRING(TOUPPER "${TEST_NAME}" TEST_NAME)
  ADD_EXECUTABLE(${TEST_NAME} ${UNIT_TEST} ${SRCS})
ENDFOREACH(UNIT_TEST ${TESTS})
